Fix .card-md overflow

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -114,3 +114,7 @@ ion-toolbar {
     width: 75%;
   }
 }
+
+.card-md {
+  overflow: visible;
+}
